# fastapi-pub-sub

./: .gitignore  README.md  docker-compose.yaml
publisher/: Dockerfile  app.py  models.py  openapi-spec.json  pyproject.toml  requirements.txt
subscriber/: Dockerfile  app.py  pyproject.toml  requirements.txt
