[tool.poetry]
name = "redis-publisher"
version = "0.1.0"
description = ""
authors = ["Andrei Tuta"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
prettyconf = "^2.2.1"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
