[tool.poetry]
name = "redis-subscriber"
version = "0.1.0"
description = ""
authors = ["Andrei Tuta"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
prettyconf = "^2.2.1"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
